--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="level_select">Select Level:</string>
     <string name="level_random">Random</string>
     <string name="level_bugged">Bugged</string>
+    <string name="title_activity_multiplayer">MultiplayerActivity</string>
 </resources>
