--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,10 @@
     <string name="key_pref_sensitivity">pref_sensitivity</string>
     <string name="key_pref_debug">pref_debug</string>
     <string name="key_pref_debug_buttons">pref_debug_buttons</string>
+    <string name="key_pref_host">pref_host</string>
 
+
+    <string name="pref_host">Act as Host</string>
 
     <string name="level_select">Select Level:</string>
     <string name="level_random">Random</string>
