--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
 
     <string name="pref_mp">Multiplayer</string>
 
+    <string name="mp_ready">Ready</string>
+
     <string name="level_select">Select Level:</string>
     <string name="level_random">Random</string>
     <string name="level_scrolling">Scrolling</string>
